# trajectory_controller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: trajectory_point_follower.h
lenkwinkel/: buildInfo.mat  codeInfo.mat  lenkwinkel.c  lenkwinkel.h  lenkwinkel_initialize.c  lenkwinkel_initialize.h  lenkwinkel_rtw.bat  lenkwinkel_rtw.mk  lenkwinkel_terminate.c  lenkwinkel_terminate.h  lenkwinkel_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
lenkwinkel/html/: coder_report.mat  contents_file.tmp  index.html  inference.mat  lenkwinkel1_mcode.html  lenkwinkel1_watch.html  lenkwinkel_buildlog1.html  lenkwinkel_c.html  lenkwinkel_h.html  lenkwinkel_initialize_c.html  lenkwinkel_initialize_h.html  lenkwinkel_terminate_c.html  lenkwinkel_terminate_h.html  lenkwinkel_types_h.html  metrics.html  rtGetInf_c.html  rtGetInf_h.html  rtGetNaN_c.html  rtGetNaN_h.html  rt_nonfinite_c.html  rt_nonfinite_h.html  rtwtypes_h.html
lenkwinkel/interface/: _coder_lenkwinkel_api.c  _coder_lenkwinkel_api.h  _coder_lenkwinkel_info.c  _coder_lenkwinkel_info.h  _coder_lenkwinkel_mex.c
src/: interface.cpp  trajectory_point_follower.cpp
